Assignment3/ass3_15CS10061.output
Terminals unused in grammar

   PUNCTUATOR


State 14 conflicts: 11 shift/reduce
State 20 conflicts: 1 shift/reduce, 2 reduce/reduce
State 22 conflicts: 11 shift/reduce
State 34 conflicts: 1 shift/reduce, 2 reduce/reduce
State 39 conflicts: 1 shift/reduce
State 44 conflicts: 3 shift/reduce
State 51 conflicts: 2 shift/reduce
State 55 conflicts: 1 shift/reduce
State 56 conflicts: 2 shift/reduce
State 60 conflicts: 1 shift/reduce
State 244 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' argument_expression_list_opt ')'
    8                   | postfix_expression '.' IDENTIFIER
    9                   | postfix_expression "->" IDENTIFIER
   10                   | postfix_expression "++"
   11                   | postfix_expression "--"
   12                   | postfix_expression ".'"

   13 argument_expression_list_opt: argument_expression_list
   14                             | %empty

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list assignment_expression

   17 unary_expression: postfix_expression
   18                 | "++" unary_expression
   19                 | '-' unary_expression
   20                 | unary_operator cast_expression

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'

   25 cast_expression: unary_expression

   26 multiplicative_expression: cast_expression
   27                          | multiplicative_expression '*' cast_expression
   28                          | multiplicative_expression '/' cast_expression
   29                          | multiplicative_expression '%' cast_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression '+' multiplicative_expression
   32                    | additive_expression '-' multiplicative_expression

   33 shift_expression: additive_expression
   34                 | shift_expression "<<" additive_expression
   35                 | shift_expression ">>" additive_expression

   36 relational_expression: shift_expression
   37                      | relational_expression '<' shift_expression
   38                      | relational_expression '>' shift_expression
   39                      | relational_expression ">=" shift_expression
   40                      | relational_expression "<=" shift_expression

   41 equality_expression: relational_expression
   42                    | equality_expression "==" relational_expression
   43                    | equality_expression "!=" relational_expression

   44 AND_expression: equality_expression
   45               | AND_expression '&' equality_expression

   46 exclusive_or_expression: AND_expression
   47                        | exclusive_or_expression '^' AND_expression

   48 inclusive_or_expression: exclusive_or_expression
   49                        | inclusive_or_expression '|' exclusive_or_expression

   50 logical_AND_expression: inclusive_or_expression
   51                       | logical_AND_expression "&&" inclusive_or_expression

   52 logical_OR_expression: logical_AND_expression
   53                      | logical_OR_expression "||" logical_AND_expression

   54 conditional_expression: logical_OR_expression
   55                       | logical_OR_expression '?' expression ':' conditional_expression

   56 assignment_expression_opt: assignment_expression
   57                          | %empty

   58 assignment_expression: conditional_expression
   59                      | unary_expression assignment_operator assignment_expression

   60 assignment_operator: '='
   61                    | "*="
   62                    | "/="
   63                    | "%="
   64                    | "+="
   65                    | "-="
   66                    | "<<="
   67                    | ">>="
   68                    | "&="
   69                    | "^="
   70                    | "|="

   71 expression_opt: expression
   72               | %empty

   73 expression: assignment_expression
   74           | expression assignment_expression

   75 constant_expression: conditional_expression

   76 declaration_specifiers_opt: declaration_specifiers
   77                           | %empty

   78 declaration: declaration_specifiers init_declarator_list_opt

   79 declaration_specifiers: type_specifier declaration_specifiers_opt

   80 init_declarator_list_opt: init_declarator_list
   81                         | %empty

   82 init_declarator_list: init_declarator
   83                     | init_declarator_list init_declarator

   84 init_declarator: declarator
   85                | declarator '=' initializer

   86 type_specifier: "void"
   87               | "char"
   88               | "short"
   89               | "int"
   90               | "long"
   91               | "float"
   92               | "double"
   93               | "Matrix"
   94               | "signed"
   95               | "unsigned"
   96               | "Bool"

   97 declarator: pointer_opt direct_declarator

   98 direct_declarator: IDENTIFIER
   99                  | '(' declarator ')'
  100                  | direct_declarator '[' assignment_expression_opt ']'
  101                  | direct_declarator '(' parameter_type_list ')'
  102                  | direct_declarator '(' identifier_list_opt ')'

  103 pointer_opt: pointer
  104            | %empty

  105 pointer: '*' pointer_opt

  106 parameter_type_list: parameter_list

  107 parameter_list: parameter_declaration
  108               | parameter_list parameter_declaration

  109 parameter_declaration: declaration_specifiers declarator
  110                      | declaration_specifiers

  111 identifier_list_opt: identifier_list
  112                    | %empty

  113 identifier_list: IDENTIFIER
  114                | identifier_list IDENTIFIER

  115 initializer: assignment_expression
  116            | '{' initializer_row_list '}'

  117 initializer_row_list: initializer_row
  118                     | initializer_row_list ';' initializer_row

  119 initializer_row: designation_opt initializer
  120                | initializer_row ',' designation_opt initializer

  121 designation_opt: designation
  122                | %empty

  123 designation: designation_list '='

  124 designation_list: designator
  125                 | designation_list designator

  126 designator: '[' constant_expression ']'
  127           | '.' IDENTIFIER

  128 statement: labeled_statement
  129          | compound_statement
  130          | expression_statement
  131          | selection_statement
  132          | iteration_statement
  133          | jump_statement

  134 labeled_statement: IDENTIFIER ':' statement
  135                  | "case" constant_expression ':' statement
  136                  | "default :" statement

  137 compound_statement: '{' block_item_list_opt '}'

  138 block_item_list_opt: block_item_list
  139                    | %empty

  140 block_item_list: block_item
  141                | block_item_list block_item

  142 block_item: declaration
  143           | statement

  144 expression_statement: expression_opt ';'

  145 selection_statement: "if" '(' expression ')' statement
  146                    | "if" '(' expression ')' statement "else" statement
  147                    | "switch" '(' expression ')' statement

  148 iteration_statement: "while" '(' expression ')' statement
  149                    | "do" statement "while" '(' expression ')' ';'
  150                    | "for" '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  151                    | "for" '(' declaration expression_opt ';' expression_opt ')' statement

  152 jump_statement: "goto" IDENTIFIER
  153               | "continue" ';'
  154               | "break" ';'
  155               | "return" expression_opt ';'

  156 translation_unit: external_declaration
  157                 | translation_unit external_declaration

  158 external_declaration: function_definition
  159                     | declaration

  160 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  161 declaration_list_opt: declaration_list
  162                     | %empty

  163 declaration_list: declaration
  164                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'%' (37) 29
'&' (38) 21 45
'(' (40) 4 7 99 101 102 145 146 147 148 149 150 151
')' (41) 4 7 99 101 102 145 146 147 148 149 150 151
'*' (42) 22 27 105
'+' (43) 23 31
',' (44) 120
'-' (45) 19 24 32
'.' (46) 8 127
'/' (47) 28
':' (58) 55 134 135
';' (59) 118 144 149 150 151 153 154 155
'<' (60) 37
'=' (61) 60 85 123
'>' (62) 38
'?' (63) 55
'[' (91) 6 100 126
']' (93) 6 100 126
'^' (94) 47
'{' (123) 116 137
'|' (124) 49
'}' (125) 116 137
error (256)
IDENTIFIER (258) 1 8 9 98 113 114 127 134 152
CONSTANT (259) 2
STRING_LITERAL (260) 3
PUNCTUATOR (261)
"*=" (262) 61
"/=" (263) 62
"%=" (264) 63
"+=" (265) 64
"-=" (266) 65
"<<=" (267) 66
">>=" (268) 67
"&=" (269) 68
"^=" (270) 69
"|=" (271) 70
"&&" (272) 51
"||" (273) 53
"==" (274) 42
"!=" (275) 43
"<=" (276) 40
">=" (277) 39
"<<" (278) 34
">>" (279) 35
"++" (280) 10 18
"--" (281) 11
PRE (282)
POST (283)
NEG (284)
POINT (285)
"->" (286) 9
".'" (287) 12
"void" (288) 86
"char" (289) 87
"short" (290) 88
"int" (291) 89
"long" (292) 90
"float" (293) 91
"double" (294) 92
"Matrix" (295) 93
"signed" (296) 94
"unsigned" (297) 95
"Bool" (298) 96
"case" (299) 135
"default :" (300) 136
"if" (301) 145 146
"else" (302) 146
"switch" (303) 147
"while" (304) 148 149
"do" (305) 149
"for" (306) 150 151
"goto" (307) 152
"continue" (308) 153
"break" (309) 154
"return" (310) 155


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
primary_expression (79)
    on left: 1 2 3 4, on right: 5
postfix_expression (80)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 17
argument_expression_list_opt (81)
    on left: 13 14, on right: 7
argument_expression_list (82)
    on left: 15 16, on right: 13 16
unary_expression (83)
    on left: 17 18 19 20, on right: 18 19 25 59
unary_operator (84)
    on left: 21 22 23 24, on right: 20
cast_expression (85)
    on left: 25, on right: 20 26 27 28 29
multiplicative_expression (86)
    on left: 26 27 28 29, on right: 27 28 29 30 31 32
additive_expression (87)
    on left: 30 31 32, on right: 31 32 33 34 35
shift_expression (88)
    on left: 33 34 35, on right: 34 35 36 37 38 39 40
relational_expression (89)
    on left: 36 37 38 39 40, on right: 37 38 39 40 41 42 43
equality_expression (90)
    on left: 41 42 43, on right: 42 43 44 45
AND_expression (91)
    on left: 44 45, on right: 45 46 47
exclusive_or_expression (92)
    on left: 46 47, on right: 47 48 49
inclusive_or_expression (93)
    on left: 48 49, on right: 49 50 51
logical_AND_expression (94)
    on left: 50 51, on right: 51 52 53
logical_OR_expression (95)
    on left: 52 53, on right: 53 54 55
conditional_expression (96)
    on left: 54 55, on right: 55 58 75
assignment_expression_opt (97)
    on left: 56 57, on right: 100
assignment_expression (98)
    on left: 58 59, on right: 15 16 56 59 73 74 115
assignment_operator (99)
    on left: 60 61 62 63 64 65 66 67 68 69 70, on right: 59
expression_opt (100)
    on left: 71 72, on right: 144 150 151 155
expression (101)
    on left: 73 74, on right: 4 6 55 71 74 145 146 147 148 149
constant_expression (102)
    on left: 75, on right: 126 135
declaration_specifiers_opt (103)
    on left: 76 77, on right: 79
declaration (104)
    on left: 78, on right: 142 151 159 163 164
declaration_specifiers (105)
    on left: 79, on right: 76 78 109 110 160
init_declarator_list_opt (106)
    on left: 80 81, on right: 78
init_declarator_list (107)
    on left: 82 83, on right: 80 83
init_declarator (108)
    on left: 84 85, on right: 82 83
type_specifier (109)
    on left: 86 87 88 89 90 91 92 93 94 95 96, on right: 79
declarator (110)
    on left: 97, on right: 84 85 99 109 160
direct_declarator (111)
    on left: 98 99 100 101 102, on right: 97 100 101 102
pointer_opt (112)
    on left: 103 104, on right: 97 105
pointer (113)
    on left: 105, on right: 103
parameter_type_list (114)
    on left: 106, on right: 101
parameter_list (115)
    on left: 107 108, on right: 106 108
parameter_declaration (116)
    on left: 109 110, on right: 107 108
identifier_list_opt (117)
    on left: 111 112, on right: 102
identifier_list (118)
    on left: 113 114, on right: 111 114
initializer (119)
    on left: 115 116, on right: 85 119 120
initializer_row_list (120)
    on left: 117 118, on right: 116 118
initializer_row (121)
    on left: 119 120, on right: 117 118 120
designation_opt (122)
    on left: 121 122, on right: 119 120
designation (123)
    on left: 123, on right: 121
designation_list (124)
    on left: 124 125, on right: 123 125
designator (125)
    on left: 126 127, on right: 124 125
statement (126)
    on left: 128 129 130 131 132 133, on right: 134 135 136 143 145
    146 147 148 149 150 151
labeled_statement (127)
    on left: 134 135 136, on right: 128
compound_statement (128)
    on left: 137, on right: 129 160
block_item_list_opt (129)
    on left: 138 139, on right: 137
block_item_list (130)
    on left: 140 141, on right: 138 141
block_item (131)
    on left: 142 143, on right: 140 141
expression_statement (132)
    on left: 144, on right: 130
selection_statement (133)
    on left: 145 146 147, on right: 131
iteration_statement (134)
    on left: 148 149 150 151, on right: 132
jump_statement (135)
    on left: 152 153 154 155, on right: 133
translation_unit (136)
    on left: 156 157, on right: 0 157
external_declaration (137)
    on left: 158 159, on right: 156 157
function_definition (138)
    on left: 160, on right: 158
declaration_list_opt (139)
    on left: 161 162, on right: 160
declaration_list (140)
    on left: 163 164, on right: 161 164


State 0

    0 $accept: . translation_unit $end

    "void"      shift, and go to state 1
    "char"      shift, and go to state 2
    "short"     shift, and go to state 3
    "int"       shift, and go to state 4
    "long"      shift, and go to state 5
    "float"     shift, and go to state 6
    "double"    shift, and go to state 7
    "Matrix"    shift, and go to state 8
    "signed"    shift, and go to state 9
    "unsigned"  shift, and go to state 10
    "Bool"      shift, and go to state 11

    declaration             go to state 12
    declaration_specifiers  go to state 13
    type_specifier          go to state 14
    translation_unit        go to state 15
    external_declaration    go to state 16
    function_definition     go to state 17


State 1

   86 type_specifier: "void" .

    $default  reduce using rule 86 (type_specifier)


State 2

   87 type_specifier: "char" .

    $default  reduce using rule 87 (type_specifier)


State 3

   88 type_specifier: "short" .

    $default  reduce using rule 88 (type_specifier)


State 4

   89 type_specifier: "int" .

    $default  reduce using rule 89 (type_specifier)


State 5

   90 type_specifier: "long" .

    $default  reduce using rule 90 (type_specifier)


State 6

   91 type_specifier: "float" .

    $default  reduce using rule 91 (type_specifier)


State 7

   92 type_specifier: "double" .

    $default  reduce using rule 92 (type_specifier)


State 8

   93 type_specifier: "Matrix" .

    $default  reduce using rule 93 (type_specifier)


State 9

   94 type_specifier: "signed" .

    $default  reduce using rule 94 (type_specifier)


State 10

   95 type_specifier: "unsigned" .

    $default  reduce using rule 95 (type_specifier)


State 11

   96 type_specifier: "Bool" .

    $default  reduce using rule 96 (type_specifier)


State 12

  159 external_declaration: declaration .

    $default  reduce using rule 159 (external_declaration)


State 13

   78 declaration: declaration_specifiers . init_declarator_list_opt
  160 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    '*'  shift, and go to state 18

    IDENTIFIER  reduce using rule 104 (pointer_opt)
    '('         reduce using rule 104 (pointer_opt)
    $default    reduce using rule 81 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 19
    init_declarator_list      go to state 20
    init_declarator           go to state 21
    declarator                go to state 22
    pointer_opt               go to state 23
    pointer                   go to state 24


State 14

   79 declaration_specifiers: type_specifier . declaration_specifiers_opt

    "void"      shift, and go to state 1
    "char"      shift, and go to state 2
    "short"     shift, and go to state 3
    "int"       shift, and go to state 4
    "long"      shift, and go to state 5
    "float"     shift, and go to state 6
    "double"    shift, and go to state 7
    "Matrix"    shift, and go to state 8
    "signed"    shift, and go to state 9
    "unsigned"  shift, and go to state 10
    "Bool"      shift, and go to state 11

    "void"      [reduce using rule 77 (declaration_specifiers_opt)]
    "char"      [reduce using rule 77 (declaration_specifiers_opt)]
    "short"     [reduce using rule 77 (declaration_specifiers_opt)]
    "int"       [reduce using rule 77 (declaration_specifiers_opt)]
    "long"      [reduce using rule 77 (declaration_specifiers_opt)]
    "float"     [reduce using rule 77 (declaration_specifiers_opt)]
    "double"    [reduce using rule 77 (declaration_specifiers_opt)]
    "Matrix"    [reduce using rule 77 (declaration_specifiers_opt)]
    "signed"    [reduce using rule 77 (declaration_specifiers_opt)]
    "unsigned"  [reduce using rule 77 (declaration_specifiers_opt)]
    "Bool"      [reduce using rule 77 (declaration_specifiers_opt)]
    $default    reduce using rule 77 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 25
    declaration_specifiers      go to state 26
    type_specifier              go to state 14


State 15

    0 $accept: translation_unit . $end
  157 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 27
    "void"      shift, and go to state 1
    "char"      shift, and go to state 2
    "short"     shift, and go to state 3
    "int"       shift, and go to state 4
    "long"      shift, and go to state 5
    "float"     shift, and go to state 6
    "double"    shift, and go to state 7
    "Matrix"    shift, and go to state 8
    "signed"    shift, and go to state 9
    "unsigned"  shift, and go to state 10
    "Bool"      shift, and go to state 11

    declaration             go to state 12
    declaration_specifiers  go to state 13
    type_specifier          go to state 14
    external_declaration    go to state 28
    function_definition     go to state 17


State 16

  156 translation_unit: external_declaration .

    $default  reduce using rule 156 (translation_unit)


State 17

  158 external_declaration: function_definition .

    $default  reduce using rule 158 (external_declaration)


State 18

  105 pointer: '*' . pointer_opt

    '*'  shift, and go to state 18

    $default  reduce using rule 104 (pointer_opt)

    pointer_opt  go to state 29
    pointer      go to state 24


State 19

   78 declaration: declaration_specifiers init_declarator_list_opt .

    $default  reduce using rule 78 (declaration)


State 20

   80 init_declarator_list_opt: init_declarator_list .
   83 init_declarator_list: init_declarator_list . init_declarator

    '*'  shift, and go to state 18

    IDENTIFIER  reduce using rule 80 (init_declarator_list_opt)
    IDENTIFIER  [reduce using rule 104 (pointer_opt)]
    '*'         [reduce using rule 80 (init_declarator_list_opt)]
    '('         reduce using rule 80 (init_declarator_list_opt)
    '('         [reduce using rule 104 (pointer_opt)]
    $default    reduce using rule 80 (init_declarator_list_opt)

    init_declarator  go to state 30
    declarator       go to state 31
    pointer_opt      go to state 23
    pointer          go to state 24


State 21

   82 init_declarator_list: init_declarator .

    $default  reduce using rule 82 (init_declarator_list)


State 22

   84 init_declarator: declarator .
   85                | declarator . '=' initializer
  160 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    '='         shift, and go to state 32
    "void"      shift, and go to state 1
    "char"      shift, and go to state 2
    "short"     shift, and go to state 3
    "int"       shift, and go to state 4
    "long"      shift, and go to state 5
    "float"     shift, and go to state 6
    "double"    shift, and go to state 7
    "Matrix"    shift, and go to state 8
    "signed"    shift, and go to state 9
    "unsigned"  shift, and go to state 10
    "Bool"      shift, and go to state 11
